rinomitati file area amministratore

--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -22,7 +22,7 @@
         <div class="corpoAmministratore">
             <p>Scrivi qui il messaggio da inviare&period;</p>
             <messaggio></messaggio>
-            <form id="nuovoMessaggioAmministratore" class="formAmm" action="../PHP/salvaNuovoMessaggioAmm.php" method="POST">
+            <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="POST">
                 <fieldset>
                     <legend>Nuovo messaggio</legend>
                     <p>I campi marcati con l&apos;asterisco * sono obbligatori&period;</p>
@@ -39,7 +39,7 @@
                     <label for="testo">Testo *</label>
                     <input type="text" name="testo" id="testo" class="" tabindex="15" />
 
-                    <input type="submit" id="salvaNuovoMessaggioAmm" value="INVIA" tabindex="16" />
+                    <input type="submit" id="salvaRispostaAmm" value="INVIA" tabindex="16" />
                 </fieldset>
             </form>
         </div>
