--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -13,42 +13,44 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 		<script src="../JS/prova.js" type="text/javascript"></script> 
 	</head>
 
 	<body>
-		<header></header>
-
-		<menu></menu>
-		<breadcrumb></breadcrumb>
-
-		<h1>Riepilogo noleggio</h1>
-
-		<div>
-			<form action="../PHP/noleggiaVeicoloFn.php?targaAuto=_TARGA_" onsubmit="return checkDateNolo();" method="post">
-				<fieldset>
-					<legend>Inserisci date del noleggio, nel formato gg-mm-aaaa</legend>
-					<label for="dataInizioNolo">Dal</label>
-					<input type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" tabindex="7" />
-					<label for="dataFineNolo">Al</label>
-					<input name="dataFineNolo" type="text" onchange="dataFineChange(event);" tabindex="8" />
-					<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" class="button" tabindex="9" />
-				</fieldset>
-			</form>
-		</div>
-			
-		<div>
-			<img class='' src='_IMMAGINE_' alt='_DESCRAUTO_'/>
-			<h2>_MARCAMODELLO_</h2>
-			<ul>
-				<li><p><strong>Cilindrata:</strong>  _CILINDRATA_</p></li>
-				<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo">_COSTONOLEGGIO_</span></p></li>
-				<li><p><strong>Cauzione:</strong> _CAUZIONE_</p></li>
-			</ul>
-
-			<h3 id="costoTot">COSTO TOTALE: 0</h3>
-		</div>
-
-		<footer></footer>
+		<div class="flexbox-parent">
+			<header></header>
+			<menu></menu>
+            <breadcrumb></breadcrumb>
+                
+            <div class="flexbox-item fill-area content flexbox-item-grow">
+                <div class="fill-area-content flexbox-item-grow">
+                    <form action="../PHP/noleggiaVeicoloFn.php?targaAuto=_TARGA_" onsubmit="return checkDateNolo();" method="post">
+						<fieldset>
+							<legend>Inserisci date del noleggio, nel formato gg-mm-aaaa</legend>
+							<label for="dataInizioNolo">Dal</label>
+							<input type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" class="dataInput"  tabindex="7" />
+							<label for="dataFineNolo">Al</label>
+							<input name="dataFineNolo" type="text" onchange="dataFineChange(event);" class="dataInput" tabindex="8" />
+							<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" class="button" tabindex="9" />
+						</fieldset>
+					</form>
+					<div class="containerVeicolo">
+						<img class="fotoVeicolo" src='_IMMAGINE_' alt='_DESCRAUTO_'/>
+						<div class="datiVeicolo">
+							<h2>_MARCAMODELLO_</h2>
+							<ul>
+								<li><p><strong>Cilindrata:</strong>  _CILINDRATA_</p></li>
+								<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo">_COSTONOLEGGIO_</span></p></li>
+								<li><p><strong>Cauzione:</strong> _CAUZIONE_</p></li>
+							</ul>
+						</div>
+						<h3 id="costoTot">COSTO TOTALE: 0</h3>
+					</div>
+				</div>
+            </div>
+            
+            <footer></footer>
+        </div>
 	</body>
 </html>
