--- a/HTML/home.html
+++ b/HTML/home.html
@@ -19,7 +19,8 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<div class="container">
+		<img src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
+		<div class="containerText">
 			<p class="titolo">CHI SIAMO</p>
 			
 			<p class="text"> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
@@ -31,10 +32,16 @@
 							Gia oggi la nostra concessionaria si rivolge ad una clientela estesa come una realt&agrave; in grado di offrire un’offerta ampia e diversificata di prodotti e servizi, 
 							il nostro obiettivo &egrave; quello di sedurre e conquistare il cliente offrendo l’auto dei suoi sogni nuova o usata con il miglior rapporto qualit&agrave;/prezzo disponibile sul mercato.
 			</p>
-			
-			<img src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 		</div>
+
 		
+		<div id="occasione">
+
+			<p class="titolo">OCCASIONE DEL GIORNO</p>
+			<p class="text"></p>
+
+		</div>
+
 		<footer></footer>
 		
 	</body>
