fix css e php area amministratore

--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -20,6 +20,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
+            <messaggio></messaggio>
             <h1>MESSAGGI RICEVUTI</h1>
             <messaggiRicevuti></messaggiRicevuti>
             <h1>MESSAGGI INVIATI</h1>
