--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -21,10 +21,8 @@
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <messaggio></messaggio>
-            <h1>MESSAGGI RICEVUTI</h1>
-            <messaggiRicevuti></messaggiRicevuti>
-            <h1>MESSAGGI INVIATI</h1>
-            <messaggiInviati></messaggiInviati>
+            <p>Lista dei messaggi ricevuti e inviati&period;</p>
+            <messaggiAmministratore></messaggiAmministratore>
         </div>
         <footer></footer>
     </body>
