--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -24,22 +24,16 @@
             <messaggio></messaggio>
             <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="POST">
                 <fieldset>
-                    <legend>Nuovo messaggio</legend>
+                    <legend>Risposta al messaggio</legend>
                     <p>I campi marcati con l&apos;asterisco * sono obbligatori&period;</p>
 
-                    <label for="mittente">Email Mittente *</label>
-                    <input type="text" name="mittente" id="mittente" class="" tabindex="12" />
-
-                    <label for="destinatario">Email Destinatario *</label>
-                    <input type="text" name="destinatario" id="destinatario" class="" tabindex="13" />
-
                     <label for="oggetto">Oggetto *</label>
-                    <input type="text" name="oggetto" id="oggetto" class="" tabindex="14" />
+                    <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
 
                     <label for="testo">Testo *</label>
-                    <input type="text" name="testo" id="testo" class="" tabindex="15" />
+                    <input type="text" name="testo" id="testo" class="" tabindex="13" />
 
-                    <input type="submit" id="salvaRispostaAmm" value="INVIA" tabindex="16" />
+                    <input type="submit" id="salvaRispostaAmm" value="INVIA" tabindex="14" />
                 </fieldset>
             </form>
         </div>
