--- a/HTML/home.html
+++ b/HTML/home.html
@@ -35,12 +35,8 @@
 		</div>
 
 		
-		<div id="occasione">
-
-			<p class="titolo">OCCASIONE DEL GIORNO</p>
-			<p class="text"></p>
-
-		</div>
+		<p class="titolo">OCCASIONE DEL GIORNO</p>
+		<occasione></occasione>
 
 		<footer></footer>
 		
