aggiunto file per la modifica delle informazioni personali

--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -20,6 +20,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
+            <messaggio></messaggio>
             <a class="tastoModifiche" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a>
             <infoPersonali></infoPersonali>
         </div>
