--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -20,6 +20,7 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
+            <messaggio></messaggio>
             <a class="tastoModifiche" href="nuovoVeicoloVendita.php" tabindex="12">AGGIUNGI VEICOLO DA VENDERE</a>
             <veicoliVendita></veicoliVendita>
         </div>
