--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -14,7 +14,7 @@
 
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
-		<script src="../JS/prova.js" type="text/javascript"></script> 
+		<script src="../JS/veicoli.js" type="text/javascript"></script> 
 	</head>
 
 	<body>
