--- a/HTML/home.html
+++ b/HTML/home.html
@@ -19,7 +19,7 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<img src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
+		<img id="immagineConcessionaria" src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 		<div class="containerText">
 			<p class="titolo">CHI SIAMO</p>
 			
