fix home.php e css

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -19,8 +19,8 @@
         <menu></menu>
 		<breadcrumb></breadcrumb>
 		
-		<img id="immagineConcessionaria" src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 		<div class="containerText">
+			<img id="immagineConcessionaria" src="../Images/Concessionaria.jpg"  alt="Concessionaria"/>
 			<p class="titolo">CHI SIAMO</p>
 			
 			<p class="text"> La nostra &egrave; una concessionaria relativamente nuova che mira ad essere un punto di riferimento per tutti gli amanti delle quattro ruote del Padovano
@@ -34,9 +34,9 @@
 			</p>
 		</div>
 		
-		
-		<p class="titolo">OCCASIONE DEL GIORNO</p>
-		<occasione></occasione>
+		<div id="containerOccasione">
+			<occasione></occasione>
+		</div>
 
 		<footer></footer>
 		
