--- a/HTML/nuovoVeicoloVendita.html
+++ b/HTML/nuovoVeicoloVendita.html
@@ -20,29 +20,35 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Inserisci qui le informazioni sul veicolo in vendita&period;</p>
+            <p>Inserisci qui le informazioni sul veicolo in vendita da aggiungere&period;</p>
             <messaggio></messaggio>
-            <form id="nuovoVeicoloVendita" class="formAmm" action="../PHP/salvaNuovoVeicoloVendita.php" method="POST">
+            <form id="nuovoVeicoloVendita" class="formAmm" action="../PHP/salvaNuovoVeicoloVendita.php" method="post">
                 <fieldset>
-                    <legend>Informazioni sul veicolo in vendita da aggiungere </legend>
-                    <p>I campi marcati con l&apos;asterisco * sono obbligatori</p>
+                    <legend>Informazioni Veicolo</legend>
+                    <p>Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
                 
-                    <label for="marca">Marca</label>
+                    <label for="marca">Marca &ast;</label>
                     <input type="text" name="marca" id="marca" class="" tabindex="12" />
 
-                    <label for="modello">Modello</label>
+                    <label for="modello">Modello &ast;</label>
                     <input type="text" name="modello" id="modello" class="" tabindex="13" />
 
-                    <label for="km">Chilometri</label>
+                    <label for="km">Chilometri &ast;</label>
                     <input type="text" name="km" id="km" class="" tabindex="14" />
 
-                    <label for="cilindrata">Cilindrata</label>
+                    <label for="cilindrata">Cilindrata in cc &ast;</label>
                     <input type="text" name="cilindrata" id="cilindrata" class="" tabindex="15" />
 
-                    <label for="prezzo">Prezzo</label>
+                    <label for="prezzo">Prezzo in &euro; &ast;</label>
                     <input type="text" name="prezzo" id="prezzo" class="" tabindex="16" />
 
-                    <input type="submit" id="salvaNuovoVeicoloVendita" value="SALVA" tabindex="17" />
+                    <label for="immagineAuto">Immagine &ast;</label>
+                    <input type="file" name="immagineAuto" id="immagineAuto" class="" tabindex="17" />
+
+                    <label for="descrizione">Descrizione dell&apos;immagine &ast;</label>
+                    <input type="text" name="descrizione" id="descrizione" class="" tabindex="18" />
+
+                    <input type="submit" id="salvaNuovoVeicoloVendita" value="SALVA" tabindex="19" />
                 </fieldset>
             </form>
         </div>
