--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -20,12 +20,12 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Scrivi qui il messaggio da inviare&period;</p>
+            <p>Scrivi qui il messaggio di risposta da inviare&period;</p>
             <messaggio></messaggio>
-            <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="POST">
+            <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post">
                 <fieldset>
                     <legend>Risposta al messaggio</legend>
-                    <p>I campi marcati con l&apos;asterisco * sono obbligatori&period;</p>
+                    <p>Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
                     <label for="oggetto">Oggetto *</label>
                     <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
