fix html "post"

--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -22,7 +22,7 @@
         <div class="corpoAmministratore">
             <messaggio></messaggio>
             <p>Inserire qui le informazioni personali da modificare&period;</p>
-            <form id="modificaInfo" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="POST">
+            <form id="modificaInfo" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post">
                 <fieldset>
                     <legend>Informazioni Personali</legend>
                     <p><strong>Nota bene</strong>&colon; ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
