--- a/HTML/modificaVeicoloVendita.html
+++ b/HTML/modificaVeicoloVendita.html
@@ -20,11 +20,12 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Inserisci qui le informazioni sul veicolo da modificare&period;</p>
+            <p>Inserisci qui le informazioni sul veicolo in vendita da modificare&period;</p>
             <messaggio></messaggio>
-            <form id="modificaVeicoloVendita" class="formAmm" onsubmit="" action="" method="POST">
+            <form id="modificaVeicoloVendita" class="formAmm" action="../PHP/salvaVeicoloVenditaModificato.php" method="post">
                 <fieldset>
-                    <legend>Informazioni da modificare</legend>
+                    <legend>Informazioni Veicolo</legend>
+                    <p><strong>Nota bene</strong>&colon; ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
 
                     <label for="marca">Marca</label>
                     <input type="text" name="marca" id="marca" class="" tabindex="12" />
@@ -41,7 +42,7 @@
                     <label for="prezzo">Prezzo</label>
                     <input type="text" name="prezzo" id="prezzo" class="" tabindex="16" />
 
-                    <input type="submit" id="modificheVeicoloVendita" value="SALVA" tabindex="17" />
+                    <input type="submit" id="modificheVeicoloVendita" value="SALVA MODIFICHE" tabindex="17" />
                 </fieldset>
             </form>
         </div>
