--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -32,7 +32,7 @@
 							<input type="text" name="dataInizioNolo" onchange="dataInizioChange(event);" class="dataInput"  tabindex="7" />
 							<label for="dataFineNolo">Al</label>
 							<input name="dataFineNolo" type="text" onchange="dataFineChange(event);" class="dataInput" tabindex="8" />
-							<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" class="button" tabindex="9" />
+							<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" tabindex="9" />
 						</fieldset>
 					</form>
 					<div class="containerVeicolo">
