--- a/HTML/paginaVuota.html
+++ b/HTML/paginaVuota.html
@@ -9,14 +9,10 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="../CSS/cssGenerale.css" type="text/css" />
-        <link rel="stylesheet" media="screen" href="../CSS/header.css" type="text/css" />
-        <link rel="stylesheet" href="../CSS/menu.css" type="text/css" />
-        <link rel="stylesheet" href="../CSS/areaPrivata.css" type="text/css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     </head>
 
-    <body>
+    <body id="bodyPaginaVuota">
         <div class="flexbox-parent">
             <header></header>
             <breadcrumb></breadcrumb>
