uniformati messaggi d'errore

--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -35,6 +35,9 @@
 							<input type="submit" name="targa" title="'_TARGA_'" value="Prenota" tabindex="9" />
 						</fieldset>
 					</form>
+
+					<!--ERRORMESSAGEPLACEHOLDER-->
+
 					<div class="containerVeicolo">
 						<img class="fotoVeicolo" src='_IMMAGINE_' alt='_DESCRAUTO_'/>
 						<div class="datiVeicolo">
