fix upload files

--- a/HTML/modificaVeicoloNoleggio.html
+++ b/HTML/modificaVeicoloNoleggio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Modifica Veicolo &vert; Area Amministratore</title>
+        <title>Modifica Veicolo Noleggio &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="modifica veicolo a noleggio" />
 		<meta name="description" content="pagina per modifica veicolo a noleggio" />
@@ -22,7 +22,7 @@
         <div class="corpoAmministratore">
             <p>Inserisci qui le informazioni sul veicolo a noleggio da modificare&period;</p>
             <messaggio></messaggio>
-            <form id="modificaVeicoloNoleggio" class="formAmm" action="../PHP/salvaVeicoloNoleggioModificato.php" method="post">
+            <form id="modificaVeicoloNoleggio" class="formAmm" action="../PHP/salvaVeicoloNoleggioModificato.php" method="post" enctype="multipart/form-data">
                 <fieldset>
                     <legend>Informazioni Veicolo</legend>
                     <p><strong>Nota bene</strong>&colon; ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
