--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -20,11 +20,11 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Benvenuto <nome></nome>&excl;</p>
+            <p>Benvenuto<nome></nome>&excl;</p>
             <p>Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period;</p>
             <p>Comincia subito&excl;</p>
-            <a class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
-            <a class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php" tabindex="13">AGGIUNGI VEICOLO DA VENDERE</a>
+            <a class="homeAmm" class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
+            <a class="homeAmm" class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php" tabindex="13">AGGIUNGI VEICOLO DA VENDERE</a>
         </div>
         <footer></footer>
     </body>
