--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -22,10 +22,11 @@
         <div class="corpoAmministratore">
             <messaggio></messaggio>
             <p>Inserire qui le informazioni personali da modificare&period;</p>
-            <form id="modificaInfo" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post">
+            <form id="modificaInfo" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
                 <fieldset>
                     <legend>Informazioni Personali</legend>
-                    <p><strong>Nota bene</strong>&colon; ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
+                    <p>Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
+                    <p class="msgFormAmm"><strong>Nota bene</strong>&colon; l&apos;indirizzo <span xml:lang="en" lang="en">mail</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato&period;</p>
                 
                     <label for="nome">Nome</label>
                     <input type="text" name="nome" id="nome" class="" tabindex="12" />
