--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -28,8 +28,8 @@
 					<fieldset>
 						<legend>Dati personali</legend>
 
-						<label for="email">Email *</label>
-						<input type="text" name="email" id="email" class="" tabindex="7" />
+						<label for="mail">Email *</label>
+						<input type="text" name="mail" id="mail" class="mail" tabindex="7" />
 
 						<label for="nome">Nome *</label>
 						<input type="text" name="nome" id="nome" class="" tabindex="8" />
@@ -52,7 +52,7 @@
 						<label for="ripetiPassword">Ripeti password*</label>
 						<input type="password" name="ripetiPassword" id="ripetiPassword" tabindex="14" />
 
-						<input type="submit" id="registerSubmit" value="Registrati" />
+						<input type="submit" class="bottoni" value="Registrati" />
 					</fieldset>
 				</form>
 			</div>
