aggiunto link per icona html

--- a/HTML/areaPrivata.html
+++ b/HTML/areaPrivata.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="auto, preventivi, noleggi, messaggi, login, account" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Riccardo Conte" />
-		<link rel="icon" type="images/png" href="../Images/auto.svg" />
+		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     	<link rel="stylesheet" type="text/css" href="../CSS/cssUtente.css" />
     	<script type="text/javascript" src=""></script>
