--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="Concessionaria, auto, Padova, info, contatti" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Erik Tabacchi" />
-
+        <link rel="icon" type="images/svg" href="" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssContatti.css" />
         
