--- a/HTML/home.html
+++ b/HTML/home.html
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="concessionaria, auto, Padova" />
 		<meta name="language" content="italian it" />
 		<meta name="author" content="Erik Tabacchi" />
-
+		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
 	</head>
