--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -12,6 +12,8 @@
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+		<link rel="icon" type="images/svg" href="" />
+		
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 	</head>
