--- a/HTML/paginaVuota.html
+++ b/HTML/paginaVuota.html
@@ -8,6 +8,9 @@
         <meta name="language" content="italian it" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+        <link rel="icon" type="images/svg" href="" />
+        
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
     </head>
