--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -46,8 +46,8 @@
 							<h2>_MARCAMODELLO_</h2>
 							<ul>
 								<li><p><strong>Cilindrata:</strong>  _CILINDRATA_</p></li>
-								<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo">_COSTONOLEGGIO_</span></p></li>
-								<li><p><strong>Cauzione:</strong> _CAUZIONE_</p></li>
+								<li><p><strong>Costo noleggio (al giorno):</strong> <span id="costoNolo">_COSTONOLEGGIO_ &#8364;</span></p></li>
+								<li><p><strong>Cauzione:</strong> _CAUZIONE_ &#8364;</p></li>
 							</ul>
 						</div>
 						<h3 id="costoTot">COSTO TOTALE: 0</h3>
