aggiunta css amministratore

--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -21,7 +21,8 @@
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <messaggio></messaggio>
-            <a class="tastoModifiche" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a>
+            <h1 class="h1Amm">Riepilogo delle informazioni personali</h1>
+            <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a></p>
             <infoPersonali></infoPersonali>
         </div>
         <footer></footer>
