--- a/HTML/messaggiAmministratore.html
+++ b/HTML/messaggiAmministratore.html
@@ -21,7 +21,7 @@
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <messaggio></messaggio>
-            <p>Lista dei messaggi ricevuti e inviati&period;</p>
+            <h1 class="h1Amm">Lista dei messaggi ricevuti e delle risposte inviate</h1>
             <messaggiAmministratore></messaggiAmministratore>
         </div>
         <footer></footer>
