--- a/HTML/veicoliNoleggioAmministratore.html
+++ b/HTML/veicoliNoleggioAmministratore.html
@@ -21,7 +21,8 @@
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <messaggio></messaggio>
-            <a class="tastoModifiche" href="nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
+            <h1 class="h1Amm">Lista dei veicoli a noleggio</h1>
+            <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
             <veicoliNoleggio></veicoliNoleggio>
         </div>
         <footer></footer>
