--- a/HTML/veicoliVenditaAmministratore.html
+++ b/HTML/veicoliVenditaAmministratore.html
@@ -21,7 +21,8 @@
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <messaggio></messaggio>
-            <a class="tastoModifiche" href="nuovoVeicoloVendita.php" tabindex="12">AGGIUNGI VEICOLO DA VENDERE</a>
+            <h1 class="h1Amm">Lista dei veicoli in vendita</h1>
+            <p class="pLinkAmm"><a class="linkMod" href="nuovoVeicoloVendita.php" tabindex="12">AGGIUNGI VEICOLO DA VENDERE</a></p>
             <veicoliVendita></veicoliVendita>
         </div>
         <footer></footer>
