--- a/HTML/homeAmministratore.html
+++ b/HTML/homeAmministratore.html
@@ -20,11 +20,11 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Benvenuto<nome></nome>&excl;</p>
-            <p>Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period;</p>
-            <p>Comincia subito&excl;</p>
-            <a class="homeAmm" class="tastoModifiche" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="12">AGGIUNGI VEICOLO DA NOLEGGIARE</a>
-            <a class="homeAmm" class="tastoModifiche" href="../PAGES/nuovoVeicoloVendita.php" tabindex="13">AGGIUNGI VEICOLO DA VENDERE</a>
+            <h1 class="h1Amm">Benvenuto<nome></nome>&excl;</h1>
+            <p class="pAmm">Questa &egrave; l&apos;area dedicata ai dipendenti&comma; per la gestione dei veicoli e dei messaggi&period; Comincia subito&excl;</p>
+            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/messaggiAmministratore.php" tabindex="12">LISTA MESSAGGI</a></p>
+            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloNoleggio.php" tabindex="13">AGGIUNGI VEICOLO DA NOLEGGIARE</a></p>
+            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/nuovoVeicoloVendita.php" tabindex="14">AGGIUNGI VEICOLO DA VENDERE</a></p>
         </div>
         <footer></footer>
     </body>
