--- a/HTML/modificaInfoAmministratore.html
+++ b/HTML/modificaInfoAmministratore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Modifica Informazioni &vert; Area Amministratore</title>
+        <title>Modifica Informazioni Personali &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="modifica informazioni personali amministratore" />
 		<meta name="description" content="pagina per modifica informazioni personali amministratore" />
@@ -21,12 +21,12 @@
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
             <messaggio></messaggio>
-            <p>Inserire qui le informazioni personali da modificare&period;</p>
+            <p class="pAmm">Inserire qui le informazioni personali da modificare&period;</p>
+            <p class="pAmm"><strong>Attenzione</strong>&colon; l&apos;indirizzo <span xml:lang="en" lang="en">email</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato&period;</p>
             <form id="modificaInfo" class="formAmm" action="../PHP/salvaInformazioniModificate.php" method="post" enctype="multipart/form-data">
                 <fieldset>
                     <legend>Informazioni Personali</legend>
-                    <p>Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
-                    <p class="msgFormAmm"><strong>Nota bene</strong>&colon; l&apos;indirizzo <span xml:lang="en" lang="en">mail</span> con cui ci si &egrave; registrati non pu&ograve; essere modificato&period;</p>
+                    <p class="pFormAmm">Ogni campo deve essere compilato&period; Nel caso in cui il campo venga lasciato vuoto&comma; le informazioni precedentemente inserite verranno eliminate&period;</p>
                 
                     <label for="nome">Nome</label>
                     <input type="text" name="nome" id="nome" class="" tabindex="12" />
@@ -40,7 +40,7 @@
                     <label for="indirizzo">Indirizzo</label>
                     <input type="text" name="indirizzo" id="indirizzo" class="" tabindex="15" />
 
-                    <label for="nascita">Data di nascita<br />&lpar;nel formato gg-mm-aaaa&rpar;</label>
+                    <label for="nascita">Data di nascita<br />&lpar;gg-mm-aaaa&rpar;</label>
                     <input type="text" name="nascita" id="nascita" class="" tabindex="16" />
 
                     <input type="submit" id="modificaInfo" value="SALVA MODIFICHE" tabindex="17" />
