--- a/HTML/nuovoVeicoloNoleggio.html
+++ b/HTML/nuovoVeicoloNoleggio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
     <head>
-        <title>Nuovo Veicolo Noleggio &vert; Area Amministratore</title>
+        <title>Nuovo Veicolo A Noleggio &vert; Area Amministratore</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="title" content="pagina per aggiunta di nuovo veicolo" />
 		<meta name="description" content="pagina per aggiunta di nuovo veicolo" />
@@ -20,12 +20,12 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Inserisci qui le informazioni sul veicolo a noleggio da aggiungere&period;</p>
             <messaggio></messaggio>
+            <p class="pAmm">Inserisci qui le informazioni sul veicolo a noleggio da aggiungere&period;</p>
             <form id="nuovoVeicoloNoleggio" class="formAmm" action="../PHP/salvaNuovoVeicoloNoleggio.php" method="post" enctype="multipart/form-data">
                 <fieldset>
                     <legend>Informazioni Veicolo</legend>
-                    <p>Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
+                    <p class="pFormAmm">Tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
                     <label for="targa">Targa &ast;</label>
                     <input type="text" name="targa" id="targa" class="" tabindex="12" />
