--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -20,20 +20,20 @@
         <breadcrumb></breadcrumb>
         <menuAmministratore></menuAmministratore>
         <div class="corpoAmministratore">
-            <p>Scrivi qui il messaggio di risposta da inviare&period;</p>
             <messaggio></messaggio>
+            <p class="pAmm">Scrivi qui il messaggio di risposta da inviare&period;</p>
             <form id="rispostaMessaggioAmministartore" class="formAmm" action="../PHP/salvaRispostaAmministratore.php" method="post" enctype="multipart/form-data">
                 <fieldset>
                     <legend>Messaggio</legend>
                     <p><strong>Nota bene</strong>&colon; tutti i campi marcati con l&apos;asterisco &ast; sono obbligatori&period;</p>
 
-                    <label for="oggetto">Oggetto *</label>
+                    <label for="oggetto">Oggetto &ast;</label>
                     <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
 
-                    <label for="testo">Testo *</label>
-                    <input type="text" name="testo" id="testo" class="" tabindex="13" />
+                    <label for="testo">Testo &ast;</label>
+                    <textarea name="testo" id="testo" class="textbox" tabindex="13" cols="" rows="" ></textarea>
 
-                    <input type="submit" id="salvaRispostaAmm" value="INVIA" tabindex="14" />
+                    <input type="submit" id="salvaRispostaAmm" value="INVIA RISPOSTA" tabindex="14" />
                 </fieldset>
             </form>
         </div>
