fix width areapersonale

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -29,7 +29,7 @@
 
                         <loginError></loginError>
 
-                        <label for="loginEmail">Email</label>
+                        <label for="mail">Email</label>
                         <input type="text" id="mail" name="mail" class="mail" tabindex="8" />
 
                         <label for="inputPsw">Password</label>
