--- a/HTML/registrati.html
+++ b/HTML/registrati.html
@@ -37,7 +37,7 @@
 						<label for="cognome">Cognome *</label>
 						<input type="text" name="cognome" id="cognome" class="" tabindex="9" />
 
-						<label for="cel">Telefono*</label>
+						<label for="numeroTelefono">Telefono*</label>
 						<input type="text" name="numeroTelefono" id="numeroTelefono" class="" tabindex="10" />
 
 						<label for="indirizzo">Indirizzo*</label>
