fix css amministratore

--- a/HTML/infoAmministratore.html
+++ b/HTML/infoAmministratore.html
@@ -22,8 +22,8 @@
         <div class="corpoAmministratore">
             <messaggio></messaggio>
             <h1 class="h1Amm">Riepilogo delle informazioni personali</h1>
-            <p class="pLinkAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a></p>
             <infoPersonali></infoPersonali>
+            <p class="pLinkHomeAmm"><a class="linkMod" href="../PAGES/modificaInfoAmministratore.php" tabindex="12">MODIFICA INFORMAZIONI</a></p>
         </div>
         <footer></footer>
     </body>
