--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -67,7 +67,7 @@
                     <input type="text" name="numeroTelefono" class="textbox" id="numeroTelefono" tabindex="4" />
 
                     <label for="messaggio">* Messaggio</label>
-                    <textarea name="messaggio" class="textbox" id="messaggio" tabindex="5" cols="" rows="" ></textarea>
+                    <textarea name="messaggio" class="textbox" id="messaggio" tabindex="5" cols="50" rows="5" ></textarea>
                     
                     <input type="submit" id="inviaMessaggio" value="INVIA" />
                     
