fix link occasione home

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -12,6 +12,7 @@
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssHome.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
 	</head>
 	
 	<body>
