fix css amministratore

--- a/HTML/rispostaMessaggioAmministratore.html
+++ b/HTML/rispostaMessaggioAmministratore.html
@@ -31,7 +31,7 @@
                     <input type="text" name="oggetto" id="oggetto" class="" tabindex="12" />
 
                     <label for="testo">Testo &ast;</label>
-                    <textarea name="testo" id="testo" class="textbox" tabindex="13" cols="" rows="" ></textarea>
+                    <textarea name="testo" id="testo" class="textbox" tabindex="13" cols="50" rows="5" ></textarea>
 
                     <input type="submit" id="salvaRispostaAmm" value="INVIA RISPOSTA" tabindex="14" />
                 </fieldset>
