add function isAutoDisponobileDate

--- a/HTML/noleggioVeicolo.html
+++ b/HTML/noleggioVeicolo.html
@@ -16,6 +16,7 @@
 		
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
 		<script src="../JS/veicoli.js" type="text/javascript"></script> 
 	</head>
 
