--- a/HTML/noleggioAcquista.html
+++ b/HTML/noleggioAcquista.html
@@ -16,6 +16,7 @@
 		
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssVeicoli.css" />
+		<link rel="stylesheet" type="text/css" href="../CSS/cssAmministratore.css" />
 	</head>
 
 	<body>
