--- a/HTML/home.html
+++ b/HTML/home.html
@@ -8,6 +8,9 @@
 		<meta name="description" content="homepage della concessionaria" />
 		<meta name="keywords" content="concessionaria, auto, Padova" />
 		<meta name="language" content="italian it" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<meta name="author" content="Erik Tabacchi" />
 		<link rel="icon" type="images/svg" href="" />
 		<link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
