--- a/HTML/contatti.html
+++ b/HTML/contatti.html
@@ -9,6 +9,9 @@
         <meta name="keywords" content="Concessionaria, auto, Padova, info, contatti" />
 		<meta name="language" content="italian it" />
         <meta name="author" content="Erik Tabacchi" />
+
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <link rel="icon" type="images/svg" href="" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssGenerale.css" />
         <link rel="stylesheet" type="text/css" href="../CSS/cssContatti.css" />
@@ -38,7 +41,7 @@
             <div id="contatti">
                 <div class="titolo"> CONTATTI </div>
                 <ul>
-                    <li>Email: ConcessionariaGreg@gmail.com</li>
+                    <li class="nowrap">Email: ConcessionariaGreg@gmail.com</li>
                     <li>Numero di telefono:  0437 83756</li>
                     <li>Numero di fax: 0437 95565</li>
                 </ul>
